--- a/pom.xml
+++ b/pom.xml
@@ -25,17 +25,17 @@
     <dependency>
       <groupId>com.sun.faces</groupId>
       <artifactId>jsf-api</artifactId>
-      <version>2.1.7</version>
+      <version>2.2.20</version>
     </dependency>
 
     <dependency>
       <groupId>com.sun.faces</groupId>
       <artifactId>jsf-impl</artifactId>
-      <version>2.1.7</version>
+      <version>2.2.20</version>
     </dependency>
   </dependencies>
 
   <build>
-    <finalName>ugly-jsf</finalName>
+    <finalName>ROOT</finalName>
   </build>
 </project>
