--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.html linguist-detectable=false
 *.htm linguist-detectable=false
 *.xhtml linguist-detectable=false
+*.css linguist-detectable=false
