--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,18 @@ services:
     ports:
     - "8080:6969"
 
+  mariadb:
+    container_name: maridb-jsf
+    image: yobasystems/alpine-mariadb:10.4.13
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: user
+      MYSQL_PASSWORD: user
+    volumes:
+      - jsf-mariadb:/var/lib/mysql/data:rw
+      - ./mysql-dump/student.sql:/docker-entrypoint-initdb.d/student.sql:ro
+
 volumes:
-  tomcat_jsf:
+  jsf-mariadb:
